jira formatが上手く動かないためコメントアウト

--- a/views/popup.html
+++ b/views/popup.html
@@ -6,7 +6,7 @@
   <body>
     <div id="buttons">
       <button id="markdown">Markdown</button>
-      <button id="jira">Jira Format</button>
+      <!-- <button id="jira">Jira Format</button> -->
       <button id="plain">Plain text</button>
     </div>
     <script type="text/javascript" src="../scripts/popup.js"></script>
